# freedesktop-sound

./: Cargo.toml  Dockerfile  README.md  compose.yaml  flake.nix  justfile
.github/workflows/: test.yml  tests.yml
benches/: simple_lookup.rs
images/: Dockerfile.nixos  Dockerfile.ubuntu
src/: cache.rs  lib.rs
src/theme/: directories.rs  error.rs  mod.rs  parse.rs  paths.rs
